@@ -1,5 +1,8 @@
 2013-08-21  Murray Stokely  <murray@FreeBSD.org>
 
+	* inst/unitTests/runit.int64.R (test.int64): Add a test
+	  illustrating how RProtoBuf is broken in handling 64-bit integers
+	  (commented out for now).
 	* man/P.Rd: Document behavior for extensions.
 	* inst/unitTests/runit.extensions.R (test.extension): Add another test.
 	* src/wrapper_Message.cpp (rprotobuf): Add function for returning
